# sqla-graphs

./: .editorconfig  LICENSE  README.rst  setup.cfg  setup.py
example/: example_model.py  model_graph.py  table_graph.py
sqla_graphs/: __init__.py
tests/: test_example.py  utils.py
