[metadata]
name = sqla_graphs
version = attr: sqla_graphs.__version__
author = Elmer de Looff
author_email = elmer.delooff@gmail.com
description = Graphviz generators for SQLAlchemy models or databases
long_description = file: README.rst
url = https://github.com/edelooff/sqla-graphs
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Database :: Front-Ends


[options]
packages = find:
install_requires =
    pydot>=1.2.2
    sqlalchemy>=1.0

[options.extras_require]
dev =
    flake8
    flake8-black
    flake8-isort
    pytest


[flake8]
max-line-length = 88
ignore =
    E203  # disables "whitespace before ':'", as this is sometimes desired by PEP8 (and Black manages this)
    W503  # disables "line break before binary operator", preferred for this project

[isort]
atomic = true
profile = black
